# nordavix

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml  fly.toml  render.yaml
.claude/: launch.json
.github/workflows/: assistant-retention.yml  autopilot.yml  ci.yml  fly-deploy.yml  reengagement.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  celery_app.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_qbo_connections.py  003_reconciliations_and_approvals.py  004_variance_txns_and_audit_log.py  005_account_review_status.py  006_manual_subledger.py  007_subledger_evidence.py  008_reconciling_items.py  009_evidence_verification.py  010_books_start_date.py  011_role_backfill.py  012_closed_periods.py  013_task_actions.py  014_recon_prep_approve_actors.py  015_task_assign_due.py  016_intercompany_accounts.py  017_gl_balance_snapshot.py  018_period_sync.py  019_ai_commentary.py  020_feedback.py  021_variance_ai_commentary.py  022_user_per_tenant_unique.py  023_schedules.py  024_prepaid_candidates.py  025_prepaid_amort_method.py  026_missed_accrual_candidates.py  027_intercompany_pairs.py  028_fixed_asset_candidates.py  029_bank_statement_txns.py  030_tenant_soft_delete.py  031_insights_snapshots.py  032_notifications.py  033_comments.py  034_user_email_pref.py  035_user_welcomed_at.py  036_tenant_is_demo.py  037_reengagement_enrollment.py  038_bank_statement_header.py  039_period_sync_tb_balanced.py  040_proposed_entries.py  (+23 more)
backend/core/: config.py  gl_snapshot.py  qbo_auth.py  qbo_gl.py  qbo_http.py  qbo_tb.py
backend/core/ai/: budget.py  client.py  guard.py  usage.py
backend/core/audit/: log.py
backend/core/auth/: clerk.py  clerk_users.py  dependencies.py
backend/core/cache/: redis.py
backend/core/db/: base.py  mixins.py  session.py
backend/core/email/: reengagement.py  sender.py  templates.py  welcome.py
backend/core/graph/: __init__.py  context.py  resolve.py  schema.py  service.py
backend/core/ratelimit/: limiter.py
backend/core/security/: crypto.py
backend/core/storage/: r2.py
backend/core/tenancy/: context.py  middleware.py
backend/models/: __init__.py  account.py  account_review_status.py  advisory.py  ai_usage.py  assistant_conversation.py  audit_log.py  autopilot.py  bank_statement.py  bank_statement_txn.py  client_memory.py  close_review.py  close_step.py  closed_period.py  comment.py  evidence_request.py  feedback.py  fixed_asset_candidate.py  gl_accuracy_finding.py  gl_balance_snapshot.py  insights_snapshot.py  intercompany_account.py  intercompany_pair.py  missed_accrual_candidate.py  narrative.py  notification.py  period_sync.py  prepaid_candidate.py  proposed_entry.py  qbo_connection.py  reconciliation.py  reengagement_enrollment.py  relationship.py  schedule.py  subledger_evidence.py  task_action.py  tenant.py  trial_balance.py  user.py  variance.py  (+2 more)
backend/modules/adjustments/: router.py  service.py
backend/modules/advisory/: router.py  service.py
backend/modules/assistant/: attachments.py  export.py  people.py  retention.py  router.py  schemas.py  service.py  tools.py
backend/modules/audit/: router.py
backend/modules/autopilot/: engine.py  router.py
backend/modules/close_workflow/: router.py  service.py
backend/modules/comments/: router.py  service.py
backend/modules/email/: router.py  tokens.py
backend/modules/exports/: __init__.py  audit_workbook.py  financials_workbook.py  flux_workbook.py  period_workbook.py  recon_workbook.py  router.py  schedules_workbook.py  xlsx_builder.py
backend/modules/feedback/: router.py
backend/modules/financials/: exec_pdf.py  exec_report.py  internal.py  pdf.py  router.py
backend/modules/flux/: agentic.py  deep_agentic.py  pdf.py  pdf_data.py  router.py  schemas.py  service.py  tasks.py  variance_txns.py
backend/modules/gl_accuracy/: engine.py  router.py  service.py
backend/modules/graph/: router.py
backend/modules/insights/: router.py  service.py
backend/modules/intercompany/: router.py
backend/modules/internal/: router.py
backend/modules/memory/: router.py  service.py
backend/modules/notifications/: emails.py  router.py  service.py
backend/modules/onboarding/: router.py
backend/modules/pbc/: router.py
backend/modules/qbo/: __init__.py  router.py
backend/modules/reconciliations/: __init__.py
backend/modules/recons/: agentic.py  ai_verify.py  bank_csv.py  bank_match.py  bank_pdf.py  overview.py  pdf.py  pdf_data.py  router.py  schemas.py  service.py
backend/modules/reengagement/: service.py
backend/modules/review/: checks.py  engine.py  router.py
backend/modules/schedules/: calc.py  router.py
backend/modules/schedules/ai/: __init__.py  accrual_detector.py  fixed_asset_detector.py  prepaid_detector.py
backend/modules/tasks/: router.py
backend/modules/workpapers/: __init__.py  binder.py  pdf_pages.py  router.py
backend/modules/workspace/: purge.py  router.py
backend/scripts/: backfill_graph.py  purge_tenants.py  run_reengagement.py  seed_demo.py
backend/tests/: conftest.py  test_autopilot_watchdog.py  test_cash_flow_tieout.py  test_expectation.py  test_gl_accuracy_engine.py  test_graph.py  test_memory_context.py  test_notification_email.py  test_proposed_entries.py  test_qbo_retry.py  test_qbo_token_refresh.py  test_recon_clear_isolation.py  test_recon_tieout.py  test_schedule_preload.py  test_schedule_rollforward.py  test_sign_conventions.py  test_tb_integrity.py  test_tenant_isolation.py  test_tenant_isolation_comprehensive.py
docs/: RLS_CUTOVER.md  reconciliations.md
docs/decisions/: 001-multi-tenant-orm-enforcement.md  002-pii-stripping-strategy.md  003-async-ai-pipeline.md  004-hosting-and-infrastructure.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
frontend/public/: llms.txt  marketing-video.html  og-image.html  robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx  DevShell.tsx  index.css  main.tsx
(+194 files in other folders)
