[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling which top-level dirs make up the package. The backend is
# laid out flat (core/, models/, modules/) rather than under a single
# package directory, so hatchling can't auto-detect — without this it
# errors with "Unable to determine which files to ship inside the wheel".
[tool.hatch.build.targets.wheel]
packages = ["core", "models", "modules"]
include = ["main.py", "alembic.ini"]

[project]
name = "nordavix-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",          # file upload support

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",                  # async PostgreSQL driver; used for both FastAPI and Celery

    # Config + validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",                  # Excel read/write

    # Async task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # AI — Anthropic SDK only; no other LLM providers
    "anthropic>=0.28.0",

    # File storage — R2 is S3-compatible; boto3 pointed at R2 endpoint
    "boto3>=1.34.0",

    # HTTP client for JWKS fetching and internal calls
    "httpx>=0.27.0",

    # JWT verification for Clerk session tokens (RS256)
    "PyJWT[cryptography]>=2.8.0",

    # Error tracking — PII stripping configured in main.py
    "sentry-sdk[fastapi]>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                    # AsyncClient for FastAPI testing
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[s3]>=1.34.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() calls in function defaults are intentional
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "celery.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "alembic/*", "*/migrations/*"]
