[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling which top-level dirs make up the package. The backend is
# laid out flat (core/, models/, modules/) rather than under a single
# package directory, so hatchling can't auto-detect — without this it
# errors with "Unable to determine which files to ship inside the wheel".
[tool.hatch.build.targets.wheel]
packages = ["core", "models", "modules"]
include = ["main.py", "alembic.ini"]

[project]
name = "nordavix-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",          # file upload support

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",                  # async PostgreSQL driver; used for both FastAPI and Celery

    # Config + validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",                  # Excel read/write

    # Async task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # AI — Anthropic SDK only; no other LLM providers
    "anthropic>=0.28.0",

    # File storage — R2 is S3-compatible; boto3 pointed at R2 endpoint
    "boto3>=1.34.0",

    # HTTP client for JWKS fetching and internal calls
    "httpx>=0.27.0",

    # JWT verification for Clerk session tokens (RS256)
    "PyJWT[cryptography]>=2.8.0",

    # Error tracking — PII stripping configured in main.py
    "sentry-sdk[fastapi]>=1.45.0",

    # PDF generation for the Financial Package export (Big-4 style
    # statements). reportlab is pure Python — no system libs needed,
    # which keeps the Fly image tiny and the deploy reliable.
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                    # AsyncClient for FastAPI testing
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[s3]>=1.34.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    # Pragmatic style ignores — the underlying codebase has accepted these
    # patterns from day one and chasing them all is a separate cleanup.
    "B008",    # FastAPI Depends() calls in function defaults are intentional
    "B904",    # raise-from is style, not correctness
    "SIM102",  # collapsible-if — explicit nested checks read better
    "SIM105",  # use-contextlib-suppress — try/except/pass is more explicit
    "SIM108",  # if-else-block-instead-of-if-exp — readability preference
    "SIM117",  # multiple-with — nested with blocks easier to debug
    "UP045",   # use-pep604-annotation in non-runtime contexts
    "E402",    # module-import-not-at-top — intentional inline imports for
               # avoiding name conflicts (e.g. `from datetime import date as _date`)
    "E501",    # line-too-long — we use 100 char target but tolerate longer for clarity
    "E701",    # multiple-statements-on-one-line-colon — short inline class/if statements
    "E702",    # multiple-statements-on-one-line-semicolon — short helper functions
    "E712",    # comparison-to-true — `x == True` is sometimes more explicit in SQL filters
]

[tool.mypy]
python_version = "3.11"
# strict mode flags hundreds of pre-existing untyped `dict` / `list` /
# function annotations across the codebase. Turning on strict from day
# one would block every push until the whole codebase was re-annotated.
# Practical defaults: catch real type errors (mismatched args, None
# attribute access) but tolerate the legacy style noise.
strict = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "celery.*", "pandas.*"]
ignore_missing_imports = true

# Tests can stay loose — pytest fixtures and parametrize make full
# typing painful for marginal benefit.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "alembic/*", "*/migrations/*"]
